# anAntaSound

./: CMakeLists.txt  README.md  build_all_platforms.sh  test_audio_system.sh
build_scripts/: build_android.sh  build_avrora.sh  build_ios.sh  build_linux.sh  build_macos.sh  build_windows.sh
cmake/: anantasoundConfig.cmake.in
docs/: AUDIO_ANALYSIS.md
examples/: adaptive_audio_demo.cpp  advanced_audio_demo.cpp  anantasound_demo.cpp  breathing_analysis_demo.cpp  comprehensive_demo.cpp  mechanical_devices_demo.cpp  quantum_acoustic_demo.cpp  samples_demo.cpp  samples_demo_audio.cpp  samples_demo_dual.cpp
install/ios/device-arm64/lib/cmake/anantasound/: anantasoundTargets.cmake
install/ios/simulator-x64/include/anantasound/: quantum_feedback_system.hpp
install/ios/simulator-x64/lib/cmake/anantasound/: anantasoundTargets-noconfig.cmake
install/linux/include/anantasound/: consciousness_integration.hpp
install/linux/lib/: libanantasound_core.2.1.0.dylib
install/linux/lib/cmake/anantasound/: anantasoundTargets.cmake
install/macos/arm64/lib/cmake/anantasound/: anantasoundConfig.cmake  anantasoundTargets-release.cmake
install/macos/universal/lib/: libanantasound_core.dylib
install/macos/x64/include/anantasound/: anantasound_core.hpp
install/macos/x64/lib/: libanantasound_core.2.1.0.dylib  libanantasound_core.2.dylib  libanantasound_core.dylib
src/: adaptive_audio_processor.cpp  adaptive_audio_processor.hpp  anantasound_core.cpp  anantasound_core.hpp  audio_analyzer.cpp  audio_analyzer.hpp  breathing_analyzer.cpp  breathing_analyzer.hpp  consciousness_integration.cpp  consciousness_integration.hpp  mechanical_devices.cpp  mechanical_devices.hpp  qrd_integration.cpp  qrd_integration.hpp  quantum_feedback_system.cpp
tests/: test_anantasound_core.cpp  test_consciousness.cpp  test_main.cpp  test_mechanical_devices.cpp  test_quantum_feedback.cpp
tools/: flac_utility.cpp
